# rdmo-plugins-sensorsearch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  sensorsearch.toml  setup.py
rdmo_sensorsearch/: __init__.py  apps.py  client.py  config.py  config.toml  earth-sensor.toml  handlers.py  providers.py  utils.py
rdmo_sensorsearch/handlers/: __init__.py  base.py  factory.py  handler_gfz_gipp.py  handler_o2a_registry.py  handler_o2a_registry_missions.py  handler_sms.py  handler_sms_configurations.py  parser.py  registry.py
rdmo_sensorsearch/providers/: __init__.py  base.py  factory.py  meta_provider.py  provider_gfz_gipp.py  provider_o2a_registry.py  provider_o2a_registry_missions.py  provider_project_sensors.py  provider_sms.py  provider_sms_configurations.py  registry.py
rdmo_sensorsearch/signals/: data_collection_variable_sync.py  device_set_sync.py  handler_post_save.py  signal_handlers.py  utils.py  value_updater.py
testing/: sms_device-properties.json  test_readme.md
xml/: catalog.xml  catalog_configurations.xml  options.xml  options_configurations.xml  options_project_data_collection_devices.xml  options_project_sensors.xml
